--- a/index.html
+++ b/index.html
@@ -820,11 +820,11 @@
       // 3. WhatsApp Logic (Propose Day Theme)
       setTimeout(() => {
         let message =
-          `Hey ${herName} ❤️\n\n` +
+          `Hey ${yourName} ❤️\n\n` +
           `Happy Propose Day!\n\n` +
           `I wanted to ask you this officially... Will you be mine forever? 😍\n\n` +
           `I promise to love you, support you, and make you smile every single day.\n\n` +
-          `Yours forever,\n${yourName}`;
+          `Yours forever,\n${herName}`;
 
         let url = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
         window.open(url, "_blank");
